# Crossfire

./: .bettercodehub.yml  .gitignore
client/branches/1.x/: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  crossfire-client.spec
client/branches/1.x/Documentation/: Scripting.html
client/branches/1.x/common/: Makefile.am  Makefile.in  cconfig.h  client-types.h  client.c  client.h  commands.c  config.h.in  external.h  image.c  init.c  item.c  mapdata.c  metaserver.c  misc.c  p_cmd.c  player.c  proto.h  rcs-id.h
client/branches/1.x/gnome/: gnome-cf.h  gnome-cfclient.man  gnome-sound.c  gnome.c  map.c
client/branches/1.x/gtk/: Makefile.am  Makefile.in  config.c  gcfclient.man  gx11.c  gx11.h  help.c  image.c  inventory.c  keys.c  png.c  rcs-id.h  sdl.c  sound.c  text.c
client/branches/1.x/gtk-v2/: Makefile.in  TODO  gtk-v2.glade
client/branches/1.x/help/: Makefile.in
client/branches/1.x/macros/: gnome-common.m4  gnome-vfs.m4
client/branches/1.x/pixmaps/: Makefile.am  Makefile.in  unlock.xpm  unpaid.xbm
client/branches/1.x/sound-src/: .cvsignore  Makefile.in  alsa9.c  cfsndserv.c  common.c
client/branches/1.x/utils/: Makefile.in  deftoheader.pl  mdk.sh
client/branches/1.x/x11/: Makefile.am  Makefile.in  clientbmap.h  png.c  sound.c  x11.c  xutil.c
client/tags/1.10/x11/: Makefile.am
client/tags/1.11/sound-src/: Makefile.am  Makefile.in
client/tags/1.71.0/sound-src/: Makefile.am  cfsndserv.c  init.c  sndproto.h
client/tags/1.74.0/gtk-v2/: CMakeLists.txt
client/trunk/: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.rst  TODO  Win32-Readme.txt  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  crossfire-client.spec
client/trunk/Documentation/: Scripting.html
client/trunk/common/: CMakeLists.txt  Makefile.am  Makefile.in  client-types.h  client.c  client.h  commands.c  config.h.in  def-keys  def-keys.h  external.h  image.c  init.c  item-types  item.c  item.h  items.pl  mapdata.c  mapdata.h  mdk.pl  metaserver.c  metaserver.h  misc.c  msgtypes.h  msgtypes.pl  newclient.h  newsocket.c  p_cmd.c  p_cmd.h  player.c  proto.h  script.c  script.h  script_lua.c  test-metaserver.c
client/trunk/common/shared/: newclient.h
client/trunk/gnome/: gnome.c  map.c
client/trunk/gtk/: .cvsignore  Makefile.am  Makefile.in  config.c  crossfire-client-gtk.man  crossfire-client.desktop  gtkproto.h  gx11.c  gx11.h  help.c  image.c  inventory.c  keys.c  map.c  png.c  sdl.c  sound.c  text.c
client/trunk/gtk-v2/: CMakeLists.txt  Makefile.am  Makefile.in  README  TODO  crossfire-client-gtk2.man  crossfire-client.desktop  gtk-v2.glade
client/trunk/gtk-v2/glade/: AUTHORS  Makefile.am  Makefile.in  README  caelestis.glade  chthonic.glade  dialogs.glade  eureka.glade  gtk-v1.glade  gtk-v1.gladep  gtk-v2.glade  lobotomy.glade  meflin.glade  oroboros.glade  sixforty.glade  un-deux.glade  un-deux.gladep  v1-redux.glade  v1-redux.gladep
client/trunk/gtk-v2/src/: CMakeLists.txt  Makefile.am  Makefile.in  about.c  account.c  config.c  create_char.c  gtk2proto.h  image.c  image.h  info.c  info.h  interface.c  inventory.c  keys.c  magicmap.c  main.c  main.h  map.c  menubar.c  metaserver.c  opengl.c  pickup.c  png.c  sdl.c  skills.c  sound-vala.vala  sound.c  spells.c  stats.c
client/trunk/gtk-v2/themes/: Black  CMakeLists.txt  (+3 more)
client/trunk/help/: Makefile.am  Makefile.in  about.h  chelp.h  shelp.h
client/trunk/macros/: Makefile.am  ax_pthread.m4  libcurl.m4
client/trunk/pixmaps/: Makefile.am  Makefile.in  all.xpm  applied.xbm  bg.xpm  crossfiretitle.xpm  cursed.xbm  dot.xpm  hand2.xpm  lock.xpm  locked.xbm  locked.xpm  magic.xbm  magic.xpm  nonmag.xpm  question.xpm  sign_east.xpm  sign_flat.xpm  unidentified.xpm  unpaid.xbm
client/trunk/sound-src/: CMakeLists.txt  Makefile.am  Makefile.in  README  alsa9.c  cfsndserv.c  common.c  common.h  init.c  main.c  parser.c  snd.vala  sndproto.h  sounds.dist
client/trunk/utils/: Makefile.am  Makefile.in  deftoheader.pl  mdk.sh
client/trunk/x11/: .cvsignore  Makefile.am  Makefile.in  crossfire-client-x11.man  crossfire-client.desktop  png.c  rcs-id.h  sound.c  x11.c  x11proto.h  xutil.c
trunk/client/: CHANGES  ChangeLog  Makefile  Makefile.am  Makefile.in  NOTES  Protocol  README  README.rpm  TODO  acconfig.h  aclocal.m4  bladibla.txt  cconfig.h  cfclient  cfsndserv  cfsndserv.c  client.c  client.gnome  client.h  client.man  clientbmap.h  commands.c  config.cache  config.h  config.h.in  config.status  configure  configure.in  crossfire-client.spec  gcfclient  gnome-cfclient.desktop  gnome.c  gx11.c  init.c  item.c  item.h  item_types  item_types.h  items.pl  (+14 more)
trunk/client/Documentation/: Scripting.html
trunk/client/common/: Makefile.am  Makefile.in  cconfig.h  client-types.h  client.c  client.h  commands.c  config.h  config.h.in  def-keys.h  external.h  image.c  init.c  item-types.h  item.c  item.h  items.pl  main.c  mapdata.c  mapdata.h  metaserver.c  metaserver.h  misc.c  newclient.h  newsocket.c  p_cmd.c  p_cmd.h  player.c  proto.h  rcs-id.h  script.c  script.h
trunk/client/gnome/: Makefile.in  gnome-cf.h  gnome-cfclient.desktop  gnome-cfclient.soundlist  gnome.c  gnomeproto.h  map.c
trunk/client/gtk/: Makefile.in  config.c  gcfclient.man  gtkproto.h  gx11.c  gx11.h  help.c  image.c  inventory.c  keys.c  map.c  png.c  rcs-id.h  sdl.c  sound.c  text.c
trunk/client/gtk-v2/: Makefile.am  Makefile.in  TODO  gtk-v2.glade
trunk/client/help/: Makefile.in  about.h  chelp.h
trunk/client/pixmaps/: Makefile.in  all.xpm  clear.xbm  close.xpm  coin.xpm  crossfiretitle.xpm  cursed.xbm  damned.xbm  hand.xpm  hand2.xpm  lock.xpm  mag.xpm  nonmag.xpm  question.111  question.xpm  sign_east.xpm  sign_flat.xpm  sign_west.xpm  skull.xpm  stipple.111  stipple.112  unlock.xpm
trunk/client/sound-src/: Makefile.am  Makefile.in  alsa9.c  cfsndserv.c  common.c
trunk/client/utils/: Makefile.in  mdk.sh
trunk/client/x11/: Makefile.in  cfclient.man  png.c  rcs-id.h  sound.c  x11.c  x11.h  x11proto.h  xutil.c
(+22432 files in other folders)
